--- a/index.html
+++ b/index.html
@@ -49,14 +49,20 @@
       <section class="play-section">
         <div class="container">
           <div class="players">
-            <div class="user score-card">
+            <div class="user score-card" style="font-size: 2rem">
               Aditya :
-              <span class="user-score" style="margin: 0 0.2rem">00</span>
+              <span class="user-score" style="margin: 0 0.2rem; font-size: 2rem"
+                >00</span
+              >
             </div>
             <div class="VSText" style="visibility: hidden">dsaf</div>
-            <div class="robot score-card">
+            <div class="robot score-card" style="font-size: 2rem">
               Robot :
-              <span class="robot-score" style="margin: 0 0.2rem">00</span>
+              <span
+                class="robot-score"
+                style="margin: 0 0.2rem; font-size: 2rem"
+                >00</span
+              >
             </div>
           </div>
           <div class="cards">
@@ -190,7 +196,7 @@
     </div> -->
 
     <div class="finalResult">
-      <h1 class="winnerText" style="margin: 1rem"></h1>
+      <h1 class="winnerText" style="margin: 1rem; font-size: 2rem"></h1>
       <div class="btns">
         <button class="btn playAgain">Play Again</button>
       </div>
