--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
         <div class="container">
           <div class="players">
             <div class="user score-card" style="font-size: 2rem">
-              Aditya :
+              <span class="user-name"></span> :
               <span class="user-score" style="margin: 0 0.2rem; font-size: 2rem"
                 >00</span
               >
